--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -190,6 +190,11 @@ body {
   line-height: 110%;
   // background-color: $color-F9F9F9;
 }
+
+html {
+  scroll-behavior: smooth;
+}
+
 h1,
 h2,
 h3,
@@ -2780,6 +2785,7 @@ a {
           font-weight: 400;
           // line-height: 19.36px;
           text-align: left;
+          color: #BABABA;
 
 
           &::placeholder {
