--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -257,9 +257,12 @@ a {
   // &_w_1180 {
   //   max-width: 1180px;
   // }
-  // @media (max-width: 1700px) {
-  //     padding: 0 20px;
-  //   }
+  @media (max-width: 1750px) {
+    padding: 0 20px;
+  }
+  @media (max-width: 1512px) {
+      max-width: 1280px;
+    }
 }
 
 .btn {
@@ -1178,12 +1181,17 @@ a {
   font-family: Inter;
   font-size: 12px;
   font-weight: 400;
-  line-height: 12px;
+  line-height: 15.6px;
   // letter-spacing: -0.011em;
   text-align: left;
   opacity: 0.5;
   color: #fff;
   transition: opasity 0.3s ease-in-out;
+
+  .developer__text {
+    max-width: 140px;
+
+  }
 
   &:hover {
     opacity: 1;
@@ -3545,6 +3553,11 @@ a {
       justify-content: flex-start;
       gap: 32px;
 
+      
+      @media (max-width: 1512px) {
+        gap: 23px;
+      }
+
       .nav__link {
         // padding: 8px 16px;
         // display: flex;
@@ -3633,8 +3646,10 @@ a {
     align-items: center;
     gap: 15px;
 
-    @media (max-width: 1750px) {
-      padding: 15px 30px 26px;
+    @media (max-width: 1512px) {
+    grid-template-columns: 160px 1fr 200px;
+
+      // padding: 15px 30px 26px;
     }
 
     @media (max-width: 1050px) {
@@ -3769,14 +3784,20 @@ a {
     padding: 100px 0 50px;
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 672px 150px 269px 1fr;
+    grid-template-rows: 672px 150px 337px 1fr;
     // gap: 30px;
 
-    @media (max-width: 1100px) {
+    @media (max-width: 1750px) {
+      padding: 80px 20px 50px;
+    }
+
+    @media (max-width: 1512px) {
       // flex-flow: row nowrap;
       // align-items: flex-start;
-      // padding: 50px 32px;
+      padding: 80px 20px 50px;
+      grid-template-rows: 672px 130px 269px 1fr;
     }
+
     @media (max-width: 700px) {
       // flex-flow: column nowrap;
       // flex-flow: row nowrap;
@@ -3787,7 +3808,10 @@ a {
 
     .footer__top-block {
       display: grid;
+      width: 100%;
+      height: 100%;
       grid-template-columns: 544px 1fr;
+      grid-template-rows: 1fr;
       align-items: center;
       justify-content: space-between;
       // padding: 25px 0;
@@ -3796,6 +3820,8 @@ a {
       .footer__img-wrap {
         width: 100%;
         height: 100%;
+        border-radius: 10px;
+        overflow: hidden;
         & img {
           width: 100%;
           height: 100%;
@@ -3813,6 +3839,19 @@ a {
       gap: 20px;
       grid-row: 3/4;
 
+      @media (max-width: 1512px) {
+        grid-template-columns: 323px 1fr 660px;        
+      }
+
+      @media (max-width: 1150px) {
+        grid-template-columns: 100%;
+        grid-template-rows: 44% 56%;  
+        // grid-auto-flow: row;   
+
+        // grid-row: auto;
+
+      }
+
       .contacts {
         width: 100%;
         height: 100%;
@@ -3823,7 +3862,9 @@ a {
         justify-items: start;
         gap: 9px;
 
-        @media (max-width: 1100px) {
+        @media (max-width: 1150px) {
+          grid-template-columns: 50% 50%;
+          grid-template-rows: 50% 50%;
           // align-items: flex-end;
         }
 
@@ -3834,6 +3875,12 @@ a {
             font-size: 20px;
             font-weight: 500;
             color: #748d55;
+
+            @media (max-width: 1150px) {
+              grid-area: 2 / 1 / 3 / 2;
+            }
+
+
             &:hover {
               color: $color-black;
             }
@@ -3846,7 +3893,7 @@ a {
 
             font-weight: 500;
             color: white;
-            opacity: 0;
+            opacity: 0.1;
             &:hover {
               color: $color-black;
             }
@@ -3857,6 +3904,9 @@ a {
             font-weight: 400;
             color: #f5f5f5;
             // line-height: 110%;
+            @media (max-width: 1150px) {
+              max-width: 350px;
+            }
           }
         }
       }
@@ -3867,6 +3917,16 @@ a {
         grid-template-rows: 1fr;
         gap: 20px;
         grid-column: 3/4;
+
+        @media (max-width: 1150px) {
+          // grid-template-columns: 100%;
+          // grid-template-rows: 1fr 1fr;  
+          grid-row: 2/3;
+          grid-column: auto;
+
+
+  
+        }
 
         .footer__nav {
           display: grid;
@@ -3937,8 +3997,24 @@ a {
       display: grid;
       grid-template-columns: 116px 2% 390px 3% 203px 5% 185px 6% auto;
       grid-template-rows: repeat(2, 1fr);
+      align-items: center;
       gap: 2px 0;
       border-top: 1px solid rgba(245, 245, 245, 0.12);
+
+      @media (max-width: 1512px) {
+        grid-template-columns: 116px 2% 217px 3% 172px 4% 185px 2% auto;
+        grid-template-rows: 31% 66%;
+        gap: 3% 0;
+        padding-top: 25px;
+      }
+
+      @media (max-width: 1400px) {
+        grid-template-columns: 15% 60% 25%;
+        grid-template-rows: 30% 20% 30%;
+        gap: 10% 0%;
+        padding-top: 25px;
+      }
+
 
       // position: absolute;
       // top: 234px;
@@ -3957,19 +4033,19 @@ a {
       // z-index: 5;
 
       @media (max-width: 1100px) {
-        position: absolute;
-        inset: 0;
-        align-items: flex-end;
-        padding: 47px 30px;
+        // position: absolute;
+        // inset: 0;
+        // align-items: flex-end;
+        // padding: 47px 30px;
       }
 
       @media (max-width: 700px) {
-        position: relative;
-        order: 5;
-        flex-flow: column nowrap;
-        align-items: center;
-        padding: 0;
-        gap: 40px;
+        // position: relative;
+        // order: 5;
+        // flex-flow: column nowrap;
+        // align-items: center;
+        // padding: 0;
+        // gap: 40px;
 
         // inset: 0;
         // align-items: flex-end;
@@ -3985,7 +4061,9 @@ a {
         //   max-height: 37px;
         // }
 
-        @media (max-width: 1100px) {
+        @media (max-width: 1400px) {
+          grid-column: 1/2;
+          grid-row: 1/2;
           // flex: 1 1 50%;
         }
 
@@ -4008,6 +4086,12 @@ a {
         align-self: end;
 
         // grid-row: 1/2;
+
+        @media (max-width: 1400px) {
+          grid-column: 2/3;
+          grid-row: 1/2;
+          // flex: 1 1 50%;
+        }
       }
 
       .footer__btn {
@@ -4024,6 +4108,19 @@ a {
         opacity: 0.8;
         border: 1px solid rgba(245, 245, 245, 0.5);
         border-radius: 5px;
+
+        @media (max-width: 1512px) {
+          padding: 15px 20px;
+            height: 68px;
+          }
+
+          @media (max-width: 1400px) {
+            grid-column: 3/4;
+            grid-row: 1/2;
+
+            // padding: 15px 20px;
+              // height: 68px;
+            }
 
 
         &:hover {    
@@ -4046,6 +4143,24 @@ a {
         grid-template-columns: 52% 48%;
         grid-template-rows: 1fr;
         gap: 5px;
+        align-self: start;
+
+        @media (max-width: 1512px) {
+          grid-template-columns: 1fr;
+          grid-template-rows: 1fr 1fr;
+
+          }
+
+
+          @media (max-width: 1400px) {
+            grid-template-columns: auto auto;
+            grid-template-rows: 1fr;
+            justify-content: start;
+            grid-column: 1/3;
+            grid-row: 2/3;  
+            gap: 15px;
+
+            }
 
         .footer__policy {
           font-family: Inter;
@@ -4066,6 +4181,13 @@ a {
       }
 
       .footer__developer {
+        @media (max-width: 1400px) {
+          grid-column: 3/4;
+          grid-row: 3/4;  
+          }
+
+          .developer__text {
+          }
       }
 
       .footer__desc {
@@ -4073,6 +4195,16 @@ a {
         grid-row: 1/3;
         opacity: 0.5;
         color: #fff;
+        font-family: Inter;
+        font-size: 13px;
+        font-weight: 400;
+        line-height: 15.73px;
+        text-align: left;
+
+        @media (max-width: 1400px) {
+          grid-column: 1/3;
+          grid-row: 3/4;
+        }
       }
     }
   }
