--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -261,7 +261,13 @@ a {
     padding: 0 20px;
   }
   @media (max-width: 1512px) {
+      padding: 0;
+
       max-width: 1280px;
+    }
+
+    @media (max-width: 1400px) {
+      padding: 0 30px;
     }
 }
 
@@ -1303,12 +1309,39 @@ a {
   background: #ffffff;
   border-radius: 10px;
 
+
+  @media (max-width: 900px) {      
+    padding: 30px;
+    grid-template-rows: 8% 11% 49% 18% 6%;
+    gap: 2%;
+
+  }
+
+  @media (max-width: 660px) { 
+    grid-template-rows: 6% 13% 47% 15% 13%;
+    padding: 20px;
+  }
+
   .form__title {
     font-family: Inter;
     font-size: 40px;
     font-weight: 400;
     line-height: 48.41px;
     text-align: left;
+
+    @media (max-width: 900px) {      
+      font-family: Inter;
+      font-size: 30px;
+      font-weight: 400;
+      line-height: 36.31px;
+      text-align: left;
+    }
+
+    @media (max-width: 660px) { 
+      font-size: 22px;
+      line-height: 27.31px;
+    }
+
   }
   .form__desc {
     max-width: 75%;
@@ -1317,6 +1350,12 @@ a {
     font-weight: 400;
     line-height: 22.4px;
     text-align: left;
+
+    @media (max-width: 660px) { 
+      font-size: 14px;
+      max-width: 100%;
+
+    }
   }
 
   .form__label-block {
@@ -1326,6 +1365,14 @@ a {
     grid-template-columns: 1fr;
     grid-template-rows: repeat(3, 1fr);
     gap: 20px;
+
+    @media (max-width: 900px) {
+      gap: 30px;
+    }
+
+    @media (max-width: 660px) {
+      // gap: 20px;
+    }
 
     .form__label {
       display: grid;
@@ -1367,6 +1414,16 @@ a {
     align-self: end;
     width: 100%;
     height: 60px;
+
+    @media (max-width: 900px) {
+      font-size: 15px;
+
+    }
+    @media (max-width: 660px) {
+      height: 46px;
+
+
+    }
   }
 
   .form__agreement-wrap {
@@ -1377,6 +1434,11 @@ a {
     font-weight: 400;
     line-height: 19.6px;
     text-align: left;
+
+    @media (max-width: 660px) {
+      font-size: 13px;
+
+    }
 
     .form__agreement-text {
       color: #a9a9a9;
@@ -3788,22 +3850,30 @@ a {
     // gap: 30px;
 
     @media (max-width: 1750px) {
-      padding: 80px 20px 50px;
+      padding: 80px 30px 50px;
     }
 
     @media (max-width: 1512px) {
       // flex-flow: row nowrap;
       // align-items: flex-start;
-      padding: 80px 20px 50px;
+      padding: 80px 0 50px;
       grid-template-rows: 672px 130px 269px 1fr;
     }
 
-    @media (max-width: 700px) {
-      // flex-flow: column nowrap;
-      // flex-flow: row nowrap;
-      // align-items: center;
-      // padding: 50px 32px;
-      // gap: 40px;
+    @media (max-width: 1400px) {
+      padding: 60px 30px 50px;
+      grid-template-rows: auto 100px 400px 1fr;
+    }
+
+
+    @media (max-width: 1100px) {
+      grid-template-rows: auto 100px 400px 180px;
+    }
+
+    @media (max-width: 660px) {
+      padding: 40px 15px 50px;
+      grid-template-rows: auto 83px 872px 465px;
+
     }
 
     .footer__top-block {
@@ -3816,6 +3886,19 @@ a {
       justify-content: space-between;
       // padding: 25px 0;
       gap: 0 20px;
+
+      @media (max-width: 1200px) {
+        // flex-flow: row nowrap;
+        // align-items: flex-start;
+        grid-template-columns: 1fr;
+        grid-template-rows: 558px 672px;
+        gap: 20px;
+
+      }
+
+      @media (max-width: 660px) {
+        grid-template-rows: 564px 231px;
+      }
 
       .footer__img-wrap {
         width: 100%;
@@ -3845,11 +3928,12 @@ a {
 
       @media (max-width: 1150px) {
         grid-template-columns: 100%;
-        grid-template-rows: 44% 56%;  
-        // grid-auto-flow: row;   
+        grid-template-rows: 32% 67%;
+      }
 
-        // grid-row: auto;
-
+      @media (max-width: 660px) {
+        grid-template-rows: 17% 83%;
+        gap: 0;
       }
 
       .contacts {
@@ -3863,9 +3947,31 @@ a {
         gap: 9px;
 
         @media (max-width: 1150px) {
-          grid-template-columns: 50% 50%;
-          grid-template-rows: 50% 50%;
+          // grid-template-columns: 50% 50%;
+          // grid-template-rows: 50% 50%;
           // align-items: flex-end;
+          grid-template-columns: 33% 66%;
+          grid-template-rows: 26% 67%;
+        }
+
+        @media (max-width: 760px) {
+          grid-template-columns: 220px 1fr;
+
+          // grid-template-rows: 34% 18% 37%;
+      
+        }
+
+        @media (max-width: 660px) {
+          grid-template-columns: 1fr;
+          // grid-template-rows: 53px 52px auto;
+          grid-template-rows: 30px 33px auto;
+          border-bottom: 1px solid rgba(245, 245, 245, 0.12);
+
+
+
+
+          // grid-template-rows: 34% 18% 37%;
+      
         }
 
         &__item {
@@ -3893,7 +3999,14 @@ a {
 
             font-weight: 500;
             color: white;
-            opacity: 0.1;
+            opacity: 0;
+
+            
+            @media (max-width: 1100px) {
+              align-self: start;
+              font-size: 25px;
+            }
+
             &:hover {
               color: $color-black;
             }
@@ -3906,6 +4019,7 @@ a {
             // line-height: 110%;
             @media (max-width: 1150px) {
               max-width: 350px;
+              line-height: 130%;
             }
           }
         }
@@ -3922,10 +4036,14 @@ a {
           // grid-template-columns: 100%;
           // grid-template-rows: 1fr 1fr;  
           grid-row: 2/3;
-          grid-column: auto;
+          grid-column: auto;  
+        }
 
-
-  
+        @media (max-width: 660px) { 
+          grid-template-columns: 1fr;
+          grid-template-rows: repeat(3, 1fr);
+          padding-top: 38px;
+          padding-bottom: 25px;
         }
 
         .footer__nav {
@@ -3941,7 +4059,10 @@ a {
           @media (max-width: 768px) {
             // padding-top: 56px;
           }
-          @media (max-width: 680px) {
+          @media (max-width: 660px) {
+          grid-template-rows: 26% 74%;
+
+            // 26% 74%
             // order: 1;
             // padding-top: 19px;
           }
@@ -3971,6 +4092,14 @@ a {
             .nav__link {
               color: rgba(#fff, 0.1);
               transition: color 0.3s ease-in-out;
+
+              @media (max-width: 900px) {
+                gap: 30px;   
+                color: #F5F5F5;
+                letter-spacing: 0.7px;
+
+              }
+
               &:hover {
                 // color: #fff;
               }
@@ -4009,10 +4138,29 @@ a {
       }
 
       @media (max-width: 1400px) {
-        grid-template-columns: 15% 60% 25%;
-        grid-template-rows: 30% 20% 30%;
-        gap: 10% 0%;
-        padding-top: 25px;
+        grid-template-columns: 132px 1fr 205px;
+        grid-template-rows: 34% 18% 37%;
+        gap: 6% 2%;
+        padding-top: 15px;
+    
+      }
+
+      @media (max-width: 760px) {
+        grid-template-rows: 34% 24% 37%;
+        // grid-template-rows: 34% 18% 37%;
+    
+      }
+
+      @media (max-width: 660px) {
+        grid-template-columns: 1fr;
+        grid-template-rows: 44px 17px 44px 86px 105px 60px;
+
+        // grid-template-rows: repeat(6, 1fr);
+        padding-top: 23px;
+        gap: 20px;
+
+
+    
       }
 
 
@@ -4092,6 +4240,25 @@ a {
           grid-row: 1/2;
           // flex: 1 1 50%;
         }
+
+        @media (max-width: 900px) {
+          // height: 49px;
+          align-self: center;
+          // padding: 15px 20px;
+            // height: 68px;
+            font-family: Inter;
+            font-size: 16px;
+            font-weight: 400;
+            line-height: 19.36px;
+            text-align: left;
+
+          }
+
+          @media (max-width: 660px) {
+          grid-column: 1/2;
+          grid-row: 2/3;
+            
+          }
       }
 
       .footer__btn {
@@ -4122,6 +4289,22 @@ a {
               // height: 68px;
             }
 
+            @media (max-width: 900px) {
+              height: 49px;
+              align-self: center;
+
+              // padding: 15px 20px;
+                // height: 68px;
+              }
+
+              @media (max-width: 660px) {
+                grid-column: 1/2;
+                grid-row: 4/5; 
+                padding: 0;
+                
+                width: 203px;
+                height: 49px;
+              }
 
         &:hover {    
           opacity: 1;
@@ -4162,6 +4345,20 @@ a {
 
             }
 
+            @media (max-width: 1100px) {
+              gap: 30px;
+  
+              // align-self: flex-start;
+            }
+
+            @media (max-width: 660px) {
+              grid-template-columns: 1fr;
+              grid-template-rows: 1fr 1fr;
+              grid-column: 1/2;
+              grid-row: 3/4;  
+              gap: 10px;              
+            }
+
         .footer__policy {
           font-family: Inter;
           font-size: 13px;
@@ -4171,6 +4368,12 @@ a {
 
           // color: $color-828282;
           @media (max-width: 1100px) {
+            font-family: Inter;
+            font-size: 16px;
+            font-weight: 400;
+            line-height: 19.36px;
+            text-align: left;
+
             // align-self: flex-start;
           }
 
@@ -4184,7 +4387,30 @@ a {
         @media (max-width: 1400px) {
           grid-column: 3/4;
           grid-row: 3/4;  
-          }
+        }
+        
+        @media (max-width: 1100px) {
+            // justify-content: end;
+            justify-items: end;
+            grid-template-columns: 4fr 7fr;
+            // justify-self: end;
+            align-self: start;
+            padding-top: 8px;
+            gap: 15px;
+            }
+
+            @media (max-width: 660px) {
+              grid-column: 1/2;
+              grid-row: 6/7; 
+              padding-top: 0px;
+              justify-content: start;
+              justify-items: start;
+              grid-template-columns: auto auto;
+
+
+
+
+            }
 
           .developer__text {
           }
@@ -4204,6 +4430,21 @@ a {
         @media (max-width: 1400px) {
           grid-column: 1/3;
           grid-row: 3/4;
+          align-self: start;
+
+        }
+        @media (max-width: 1100px) {
+          font-size: 14px;
+          line-height: 117%;
+          max-width: 95%;
+
+        }
+
+        @media (max-width: 660px) {
+          grid-column: 1/2;
+          grid-row: 5/6;   
+          max-width: 100%;
+
         }
       }
     }
