--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -266,8 +266,14 @@ a {
       max-width: 1280px;
     }
 
-    @media (max-width: 1400px) {
+    @media (max-width: 1340px) {
       padding: 0 30px;
+      max-width: 100%;
+
+    }
+
+    @media (max-width: 660px) {
+      padding: 0 15px;
     }
 }
 
@@ -1531,6 +1537,21 @@ a {
 }
 
 .section {
+  @media (max-width: 1750px) {
+    padding: 0 20px;
+  }
+  @media (max-width: 1512px) {
+    // max-width: 1280px;
+  }
+  @media (max-width: 1400px) {
+    padding: 0 30px;
+  }
+
+  @media (max-width: 660px) {
+    padding: 0 15px;
+  }
+
+  
 }
 
 .card {
@@ -3719,8 +3740,10 @@ a {
       gap: 5px;
     }
 
-    @media (max-width: 700px) {
-      padding: 15px 15px 26px;
+    @media (max-width: 660px) {
+      grid-template-columns: 125px 1fr 100px 50px;
+
+      // padding: 15px 0 26px;
     }
 
     .nav {
@@ -4525,8 +4548,14 @@ a {
     // grid-template-rows: minmax(748px, auto) 20px auto auto auto auto auto;
     // gap: 100px;
 
+    @media (max-width: 660px) {
+      grid-template-rows: 309px 120px auto 150px auto 142px auto 100px auto 100px auto 100px auto 100px auto;
+
+    }
+
     .banner {
       grid-row: 1 / 2;
+
       .banner__container {
         width: 100%;
         height: 100%;
@@ -4540,17 +4569,56 @@ a {
         background-size: cover;
         border-radius: 10px;
 
+        @media (max-width: 960px) {
+          grid-template-columns: 1fr;
+          padding: 100px 30px;
+        }
+
+        @media (max-width: 660px) {
+          padding: 30px 20px;
+        }
+
+
+
+
         .bunner__content-wrap {
           display: grid;
           // grid-template-columns: 1fr;
           grid-template-rows: auto 50px 1fr;
           gap: 30px;
+
+          @media (max-width: 660px) {
+            gap: 15px;
+          }
+
           .bunner__title {
             font-family: Inter;
             font-size: 60px;
             font-weight: 500;
             line-height: 72.61px;
             text-align: left;
+
+            @media (max-width: 960px) {
+              font-family: Inter;
+font-size: 50px;
+font-weight: 500;
+line-height: 60.51px;
+text-align: left;
+
+            }
+
+            @media (max-width: 660px) {
+              font-family: Inter;
+              font-size: 23px;
+              font-weight: 500;
+              line-height: 27.84px;
+              text-align: left;
+            }
+
+
+            
+
+
           }
           .bunner__text {
             font-family: Inter;
@@ -4558,10 +4626,30 @@ a {
             font-weight: 400;
             line-height: 30.26px;
             text-align: left;
+
+            @media (max-width: 660px) {
+              font-family: Inter;
+              font-size: 16px;
+              font-weight: 400;
+              line-height: 19.36px;
+              text-align: left;
+              
+            }
           }
           .bunner__btn {
             width: 271px;
             height: 60px;
+
+            @media (max-width: 660px) {
+              width: 214px;
+              height: 49px;
+              font-family: Inter;
+              font-size: 15px;
+              font-weight: 500;
+              line-height: 18.15px;
+              text-align: center;
+
+            }
           }
         }
       }
