--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1537,19 +1537,7 @@ a {
 }
 
 .section {
-  @media (max-width: 1750px) {
-    padding: 0 20px;
-  }
-  @media (max-width: 1512px) {
-    // max-width: 1280px;
-  }
-  @media (max-width: 1400px) {
-    padding: 0 30px;
-  }
 
-  @media (max-width: 660px) {
-    padding: 0 15px;
-  }
 
   
 }
@@ -4549,12 +4537,26 @@ a {
     // gap: 100px;
 
     @media (max-width: 660px) {
-      grid-template-rows: 309px 120px auto 150px auto 142px auto 100px auto 100px auto 100px auto 100px auto;
+      grid-template-rows: 309px 100px auto 150px auto 142px auto 100px auto 100px auto 100px auto 100px auto;
 
     }
 
     .banner {
       grid-row: 1 / 2;
+
+      @media (max-width: 1750px) {
+        padding: 0 20px;
+      }
+      @media (max-width: 1512px) {
+        // max-width: 1280px;
+      }
+      @media (max-width: 1400px) {
+        padding: 0 30px;
+      }
+    
+      @media (max-width: 660px) {
+        padding: 0 15px;
+      }
 
       .banner__container {
         width: 100%;
@@ -4664,11 +4666,54 @@ text-align: left;
         grid-template-rows: minmax(253px, auto) 820px;
         gap: 60px 0;
 
+        @media (max-width: 1512px) {
+        grid-template-rows: minmax(253px, auto) 710px;
+          gap: 16px 0;
+        }
+
+        @media (max-width: 1340px) {
+          grid-template-rows: minmax(366px, auto) 560px;
+          }
+
+          @media (max-width: 660px) {
+            grid-template-rows: minmax(326px, auto) 273px;
+            // grid-template-rows: minmax(366px, auto) 560px;
+            }
+
+
+
+
+
         .about__content-wrap {
           display: grid;
           grid-template-columns: 57% 32%;
           grid-template-rows: 19px 1fr;
           gap: 16% 11%;
+
+          @media (max-width: 1512px) {
+            gap: 16% 8%;
+          }
+
+          @media (max-width: 1340px) {
+            grid-template-columns: 1fr;
+            grid-template-rows: auto auto;
+            gap: 0;
+
+  
+          }
+
+          @media (max-width: 660px) {
+            grid-template-columns: 1fr;
+            // grid-template-rows: 37px 90px auto;
+            grid-template-rows: max-content max-content max-content;
+            gap: 20px;  
+          }
+
+          @media (max-width: 960px) {
+//  gap: 0;
+  
+          }
+
 
           .about__desc {
             grid-area: 1 / 1 / 2 / 2;
@@ -4678,6 +4723,20 @@ text-align: left;
             line-height: 19.36px;
             text-align: left;
             color: #8c8c8c;
+
+            @media (max-width: 1340px) {
+              grid-area: 1 / 1 / 2 / 2;
+    
+            }
+
+            @media (max-width: 660px) {
+              font-family: Inter;
+              font-size: 14px;
+              font-weight: 400;
+              line-height: 16.94px;
+              text-align: left;
+               
+            }
           }
           .about__title {
             grid-area: 2 / 1 / 3 / 2;
@@ -4688,6 +4747,32 @@ text-align: left;
             line-height: 96.82px;
             text-align: left;
             color: #56693e;
+
+
+
+            @media (max-width: 1512px) {
+              font-size: 62px;
+              line-height: 74.82px;
+            }
+
+            @media (max-width: 1340px) {
+              grid-area: 2 / 1 / 3 / 2;
+    
+            }
+
+            @media (max-width: 960px) {
+              font-size: 50px;
+              line-height: 60.82px;
+    
+            }
+            @media (max-width: 660px) {
+              font-family: Inter;
+              font-size: 30px;
+              font-weight: 400;
+              line-height: 36.31px;
+              text-align: left;             
+    
+            }
           }
 
           .about__text-block {
@@ -4699,6 +4784,15 @@ text-align: left;
             align-items: start;
             // gap: 10px;
 
+            @media (max-width: 1512px) {
+              grid-template-rows: 0px auto 12px 1fr;
+            }
+
+            @media (max-width: 1340px) {
+              grid-area: 3 / 1 / 4 / 2;
+    
+            }
+
             .about__text {
               grid-row: 2 / 3;
               font-family: Inter;
@@ -4708,6 +4802,11 @@ text-align: left;
               text-align: left;
               color: #616161;
               letter-spacing: -1.4px;
+
+              @media (max-width: 660px) {
+                letter-spacing: -1.1px;
+                line-height: 20.4px;
+              }
 
               &:last-child {
                 grid-row: 4 / 5;
@@ -4721,13 +4820,29 @@ text-align: left;
           grid-column: 2 span;
           position: relative;
 
+          @media (max-width: 1512px) {
+            height: 100%;
+            }
+
           .about__img {
             border-radius: 10px;
             display: block;
+
+            @media (max-width: 1512px) {
+                object-fit: cover;
+                width: 100%;
+                height: 100%;
+                object-position: center;
+              }
           }
 
           .gp {
             cursor: pointer;
+
+            @media (max-width: 1750px) {
+              display: none;
+            }
+            
             & path {
               stroke: transparent;
               transition: stroke 0.3s ease-in-out;
@@ -4735,6 +4850,7 @@ text-align: left;
                 stroke: white;
               }
             }
+
           }
 
           .gp_1 {
@@ -4759,6 +4875,7 @@ text-align: left;
             position: absolute;
             left: 795.5px;
             top: 53.5px;
+            pointer-events: none;
           }
 
           .about__img-first {
@@ -4777,6 +4894,10 @@ text-align: left;
 
             background: #ffffff;
             border-radius: 5px;
+
+            @media (max-width: 1750px) {
+              display: none;
+            }
           }
           .about__img-second {
             display: flex;
@@ -4794,6 +4915,10 @@ text-align: left;
             background: #748d55;
             border-radius: 5px;
             color: white;
+
+            @media (max-width: 1750px) {
+              display: none;
+            }
           }
         }
       }
