--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -5317,8 +5317,12 @@ a {
         max-width: 1280px;
       }
 
+      @media (max-width: 960px) {
+        padding: 14px 30px 57px;
+      }
+
       @media (max-width: 660px) {
-        padding: 14px 0 95px;
+        padding: 14px 0 57px;
       }
 
       .slider__title {
@@ -5487,6 +5491,7 @@ a {
     // gap: 100px;
 
     @media (max-width: 1512px) {
+      padding-top: 43px;
       // grid-template-rows: 748px 120px auto 100px auto;
     }
 
@@ -5507,9 +5512,44 @@ a {
         grid-template-columns: 40% 58.5%;
         grid-template-rows: auto auto 690px;
         gap: 40px 1.5%;
+        padding: 43px 0 83px;
+
+        @media (max-width: 1512px) {
+          grid-template-columns: 54% 44.5%;
+          grid-template-rows: auto auto 672px;
+        }
+
+        @media (max-width: 1340px) {
+        grid-template-columns: 1fr;
+        grid-template-rows: 3% 3% 5% 57% 32%;
+        padding: 43px 30px 83px;
+        gap: 10px 0;
+
+        }
+
+        @media (max-width: 960px) {
+          padding: 60px 30px 63px;
+          grid-template-rows: 5.5% 3% 9% 48% 32%;
+  
+          }
+
+          @media (max-width: 660px) {
+            padding: 60px 15px 76px;
+            grid-template-rows: auto auto auto auto auto;
+        gap: 20px 0;
+            
+            }
       }
       .plans__title {
         grid-column: 2 span;
+
+        @media (max-width: 1340px) {
+          grid-column: 1;
+          }
+
+          @media (max-width: 660px) {
+            font-size: 20px;
+            }
       }
 
       .plans__filter-list {
@@ -5517,6 +5557,17 @@ a {
         grid-auto-flow: column;
         justify-content: start;
         gap: 10px;
+        align-self: center;
+
+        
+        @media (max-width: 660px) {
+          grid-template-columns: repeat(5, auto);
+          grid-template-rows: unset;  
+          grid-auto-flow: unset;
+          justify-content: center;
+        gap: 6px;
+
+          }
 
         .plans__filter-item {
           padding: 15px 20px;
@@ -5536,6 +5587,23 @@ a {
           color: #616161;
           transition: color 0.3s ease-in-out, background-color 0.3s ease-in-out,
             border-color 0.3s ease-in-out;
+            display: grid;
+            place-items: center;
+            height: 54px;
+            min-width: 54px;
+
+            @media (max-width: 660px) {
+              font-size: 15px;
+              width: max-content;
+            }
+
+            &:last-child {
+              @media (max-width: 660px) {
+                width: 100%;
+                grid-column: 5 span;
+                }
+            }
+
 
           &:hover {
             background: #9abc6f;
@@ -5560,6 +5628,13 @@ a {
             width: 0px;
             height: 54px;
             border: 1px solid #cbcbcb;
+            min-width: 0;
+
+            @media (max-width: 660px) {
+              height: 0;
+              width: 100%;
+              grid-column: 5 span;
+              }
           }
         }
       }
@@ -5573,6 +5648,20 @@ a {
         line-height: 22.4px;
         text-align: left;
         color: #616161;
+
+        @media (max-width: 1512px) {
+          align-self: center;
+        }
+
+        @media (max-width: 960px) {
+          grid-row: 2/3;
+        }
+
+        @media (max-width: 660px) {
+          font-size: 14px;
+          line-height: 19.4px;
+          margin-bottom: 20px;
+        }
       }
 
       .plans__list {
@@ -5590,6 +5679,14 @@ a {
 
         background: #ffffff;
         border-radius: 10px;
+
+        @media (max-width: 660px) {
+          grid-template-columns: repeat(2, 1fr);
+          grid-template-rows: unset;
+
+
+  
+          }
 
         .plans__item {
           width: 100%;
@@ -5636,36 +5733,110 @@ a {
         background: #ffffff;
         border-radius: 10px;
 
+        @media (max-width: 1512px) {
+          grid-template-columns: 1fr;
+          grid-template-rows: 19% 20% 22% 6% 7% 8%;
+        }
+
+        @media (max-width: 1340px) {
+          grid-template-columns: 44% 40%;
+          grid-template-rows: 22% 11% 29%;
+          gap: 6px 5%;
+          }
+
+          @media (max-width: 960px) {
+              grid-template-columns: 35% 60%;
+            grid-template-rows: 19% 17% 29%;
+            }
+
+
+              @media (max-width: 660px) {
+                grid-template-columns: 1fr;
+                grid-template-rows: 19% 20% 25% 6% 9% 8%;
+                margin-top: -10px;
+              }
+
+
         .plans__img {
           // justify-self: end;
           grid-row: 3 span;
         }
         .plans__desc {
           align-self: end;
-          justify-self: start;
+          justify-self: center;
           font-family: Inter;
           font-size: 14px;
           font-weight: 400;
           line-height: 16.94px;
           text-align: left;
           color: #616161;
+
+          @media (max-width: 1512px) {
+            max-width: 271px;
+            width: 100%;
+          }
+
+          @media (max-width: 960px) {
+            font-size: 20px;
+            line-height: 27.26px;
+          }
+
+                    @media (max-width: 660px) {
+            font-family: Inter;
+font-size: 14px;
+font-weight: 400;
+line-height: 16.94px;
+text-align: left;
+max-width: 100%;
+
+          }
         }
         .plans__name {
           justify-self: center;
           align-self: start;
           width: 100%;
-
-          //styleName: н3;
           font-family: Inter;
           font-size: 25px;
           font-weight: 400;
           line-height: 30.26px;
           text-align: left;
           color: #363636;
+
+          @media (max-width: 1512px) {
+            max-width: 271px;
+            width: 100%;
+
+          }
+
+                    @media (max-width: 660px) {
+          font-family: Inter;
+font-size: 18px;
+font-weight: 400;
+line-height: 25.2px;
+text-align: left;
+            max-width: 100%;
+
+          }
+
+
         }
         .plans__btn {
           justify-self: center;
           align-self: start;
+
+                              @media (max-width: 660px) {
+          font-family: Inter;
+font-size: 15px;
+font-weight: 500;
+line-height: 18.15px;
+text-align: center;
+max-width: 100%;
+width: 100%;
+height: 48px;
+
+          }
+
+
         }
       }
     }
@@ -5700,7 +5871,8 @@ a {
         .geo__advantages-item {
           display: grid;
           grid-template-columns: 7fr 3fr;
-          grid-auto-flow: row;
+          grid-template-rows: 50px auto;
+          // grid-auto-flow: row;
           align-items: center;
           justify-content: center;
           gap: 15px 17px;
@@ -8773,6 +8945,7 @@ cursor: pointer; */
 
     .util-why {
       padding: 100px 10px 20px;
+
       @media (max-width: 900px) {
         padding: 100px 0 0;
       }
