--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -5318,7 +5318,7 @@ a {
       }
 
       @media (max-width: 960px) {
-        padding: 14px 30px 57px;
+        padding: 14px 30px 100px;
       }
 
       @media (max-width: 660px) {
@@ -5480,7 +5480,7 @@ a {
   }
 
   .glavnaya__main_bot {
-    // padding-top: 0;
+    padding-top: 0;
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: auto 180px auto 100px;
@@ -5491,7 +5491,7 @@ a {
     // gap: 100px;
 
     @media (max-width: 1512px) {
-      padding-top: 43px;
+      // padding-top: 43px;
       // grid-template-rows: 748px 120px auto 100px auto;
     }
 
@@ -5512,7 +5512,7 @@ a {
         grid-template-columns: 40% 58.5%;
         grid-template-rows: auto auto 690px;
         gap: 40px 1.5%;
-        padding: 43px 0 83px;
+        padding: 85px 0 83px;
 
         @media (max-width: 1512px) {
           grid-template-columns: 54% 44.5%;
@@ -5529,7 +5529,9 @@ a {
 
         @media (max-width: 960px) {
           padding: 60px 30px 63px;
-          grid-template-rows: 5.5% 3% 9% 48% 32%;
+          grid-template-rows: 41px 75px 70px auto auto;
+        gap: 20px 0;
+
   
           }
 
@@ -5679,6 +5681,16 @@ a {
 
         background: #ffffff;
         border-radius: 10px;
+
+        @media (max-width: 960px) {
+          grid-template-columns: repeat(3, 30%);
+          grid-template-rows: initial;
+            padding: 30px;
+
+
+
+  
+          }
 
         @media (max-width: 660px) {
           grid-template-columns: repeat(2, 1fr);
@@ -11635,8 +11647,8 @@ cursor: pointer; */
 
 // --------------------------------------- GOODS-item end ---------------------------------------
 
-.slider,
-.plans,
+// .slider,
+// .plans,
 .geo {
-  // display: none;
+  display: none;
 }
