--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -2116,6 +2116,12 @@ a {
   background-color: #fff;
   z-index: 1000;
   align-items: center;
+
+  @media (max-width: 660px) {
+    padding: 20px 70px 20px 20px;
+
+  }
+
   .cookie__wrapper {
     display: flex;
     margin-right: 20px;
@@ -2128,6 +2134,18 @@ a {
     font-weight: 400;
     font-size: 18px;
     line-height: 100%;
+
+    @media (max-width: 1920px) {
+      font-size: 1vw;
+      }
+
+      @media (max-width: 1360px) {
+        font-size: 2vw;
+        }
+  
+      @media (max-width: 660px) {
+        font-size: 3vw;
+      }
   }
   .cookie__wrapper a {
     color: #333333;
@@ -2136,6 +2154,18 @@ a {
     font-weight: 400;
     font-size: 18px;
     line-height: 100%;
+
+    @media (max-width: 1920px) {
+      font-size: 1vw;
+      }
+
+      @media (max-width: 1360px) {
+        font-size: 2vw;
+        }
+  
+      @media (max-width: 660px) {
+        font-size: 3vw;
+      }
   }
   .cookie__wrapper a:hover {
     color: #333333;
@@ -2148,6 +2178,18 @@ a {
     font-weight: 400;
     font-size: 16px;
     line-height: 100%;
+
+    @media (max-width: 1920px) {
+      font-size: 1vw;
+      }
+
+      @media (max-width: 1360px) {
+        font-size: 2vw;
+        }
+  
+      @media (max-width: 660px) {
+        font-size: 3vw;
+      }
   }
   .cookie__close {
     position: absolute;
@@ -2169,16 +2211,34 @@ a {
 
 .container_info {
   padding-top: 100px;
+
   .personal_title {
     font-size: 60px;
     line-height: 150%;
     margin-bottom: 30px;
+
+    
+    @media (max-width: 1920px) {
+      font-size: 3.1vw;
+      }
+  
+      @media (max-width: 660px) {
+        font-size: 8vw;
+      }
   }
 
   .policy__heading {
-    font-size: 100px;
+    font-size: 80px;
     line-height: 110%;
     margin-bottom: 30px;
+
+    @media (max-width: 1920px) {
+      font-size: 4.2vw;
+      }
+  
+      @media (max-width: 660px) {
+        font-size: 10vw;
+      }
   }
 
   .policy__text,
@@ -2186,6 +2246,16 @@ a {
     font-size: 26px;
     line-height: 150%;
     margin-bottom: 25px;
+
+    @media (max-width: 1920px) {
+      font-size: 2vw;
+      }
+  
+      @media (max-width: 660px) {
+        font-size: 5vw;
+      }
+
+
   }
 
   .politics_info_subtitle {
@@ -2204,6 +2274,14 @@ a {
     font-size: 60px;
     line-height: 150%;
     margin-bottom: 30px;
+
+    @media (max-width: 1920px) {
+      font-size: 3.1vw;
+      }
+  
+      @media (max-width: 660px) {
+        font-size: 8vw;
+      }
   }
 
   .policy__subtitle {
@@ -2214,6 +2292,15 @@ a {
 
   .policy__item {
     margin-bottom: 10px;
+
+    @media (max-width: 1920px) {
+      font-size: 1.8vw;
+      line-height: 130%;
+      }
+  
+      @media (max-width: 660px) {
+        font-size: 4vw;
+      }
   }
 }
 
